--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,29 +90,16 @@ nav #menu li:hover ul li
 
 #main_content
 {
-float: left;
-width: 625px;
-margin-right: 15px;
-margin-bottom: 10px;
+margin: 10px 10px;
+padding: 10px 10px;
 }
 
 #sidebar
 {
-   padding: 10px 10px;
+margin: 10px 10px;
+padding: 10px 10px;
 }
 
-#main_content, #sidebar
-{
-   height: 850px;
-}
-
-article
-{
-float: left;
-width: 625px;
-margin-right: 15px;
-margin-bottom: 10px;
-} 
  
 article p
 {
@@ -147,11 +134,10 @@ text-transform: none;
 
 aside
 {
-margin-left: 640px;
-width: 235px;
+width: 100%;
 background-color: rgb(255, 255, 255);
 border-radius: 10px;
-padding: 10px;
+
 color: black;
 margin-bottom: 15px;
 border: 1px solid dodgerblue;
@@ -169,10 +155,6 @@ font-weight: normal;
 border-radius: 10px 10px 0px 0px;
 text-transform: none;
 display: block;
-width: 235px;
-position: relative;
-right: 10px;
-bottom: 10px;
 text-align: center;
 }
  
@@ -182,6 +164,7 @@ text-align: center;
 font-family: Verdana, Arial, serif;
 font-size: 0.8em;
 color: rgb(124, 123, 123);
+padding: 5px 10px;
 }
 
 aside #actual
@@ -194,6 +177,12 @@ font-size: 14px;
 line-height: 1.4em;
 text-decoration: none;
 padding: 5px;
+padding: 5px 10px;
+}
+
+aside form
+{
+padding: 5px 10px;	
 }
 
 aside a
@@ -203,7 +192,7 @@ padding: 2px 10px;
 color: rgb(0, 160, 238);
 text-decoration: underline;
 font-size: 12px;
-font-weight: normal !;
+font-weight: normal;
 font-family: Verdana, Geneva, sans-serif;
 }
 
